--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
-table {
+td {
+  padding: 0;
+  margin: 0;
+  text-align: center;
   border-style: solid;
   border-radius: 1px;
   border-color: black;
   font-size: 50px;
+  height: 50px;
+  width: 50px;
+}
+.selection {
+  text-align: center;
+  
 }
