--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,23 @@
-td {
+* {
   padding: 0;
   margin: 0;
+}
+.selection {
+  margin-top: 20px;
+}
+table {
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
+td {
+
   text-align: center;
   border-style: solid;
   border-radius: 1px;
   border-color: black;
-  font-size: 50px;
-  height: 50px;
-  width: 50px;
+  height: 25px;
+  width: 25px;
 }
 .selection {
   text-align: center;
