--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body {
+  background-color: lightslategray;
+}
 * {
   padding: 0;
   margin: 0;
@@ -9,17 +12,20 @@ table {
   margin-top: 20px;
   margin-right: auto;
   margin-left: auto;
+  border-spacing: 0;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
 }
 td {
-
-  text-align: center;
-  border-style: solid;
-  border-radius: 1px;
-  border-color: black;
   height: 25px;
   width: 25px;
+  text-align: center;
+  background-color: lightgray;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
 }
 .selection {
   text-align: center;
-  
 }
