--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
 body {
   background-color: #79b799;
 }
+
 * {
   padding: 0;
   margin: 0;
 }
+
 .selection {
   margin-top: 20px;
 }
+
 label {
   color: white;
 }
+
 table {
   margin-top: 20px;
   margin-right: auto;
@@ -20,6 +24,7 @@ table {
   border-color: black;
   border-width: 2px;
 }
+
 td {
   height: 25px;
   width: 25px;
@@ -29,9 +34,25 @@ td {
   border-color: gray;
   border-width: 1px;
 }
+
 td:hover {
   background-color: rgba(200, 200, 200, 1);
 }
+
 .selection {
   text-align: center;
+}
+
+button {
+  all: unset;
+  margin: 0 auto;
+  display: block;
+  margin-top: 30px;
+  cursor: pointer;
+  background-color: lightgray;
+  text-align: center;
+}
+
+button:hover {
+  background-color: rgba(200, 200, 200, 1);
 }
