--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,27 @@ button {
   display: block;
   margin-top: 30px;
   cursor: pointer;
-  background-color: lightgray;
-  text-align: center;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
 }
 
 button:hover {
   background-color: rgba(200, 200, 200, 1);
+}
+
+.playAgainButton {
+  background-color: lightgray;
+  text-align: center;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.flagButton {
+  width: 50px;
+  height: 50px;
+  margin-top: 10px;
+  background: lightgray url(./img/flag-icon.png);
+  background-repeat: no-repeat;
+  background-position: 7px;
 }
