--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ table {
 }
 
 td {
+  position: relative;
   height: 25px;
   width: 25px;
   text-align: center;
@@ -83,8 +84,24 @@ button .flagCounter {
 }
 
 img {
-  width: 60%;
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 60%;
+  height: auto;
   display: block;
+  margin: auto;
+  pointer-events: none;
+}
+
+img.flagOnMine {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  max-width: 50%;
+  height: auto;
+  display: block;
+  margin: auto;
   pointer-events: none;
 }
