--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,8 @@ button:hover {
 
 button .flagCounter {
   font-size: 10px;
+  font-weight: 700;
+  color: brown;
   position: absolute;
   top: 0px;
   left: 2px;
