--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ button:active {
   width: 50px;
   height: 50px;
   margin-top: 10px;
-  background: lightgray url(../img/flag-icon.png);
+  background: lightgray url(./img/flag-icon.png);
   background-repeat: no-repeat;
   background-position: 50%;
 }
