--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ p,
 label,
 input,
 #choice,
-#joinServerButton {
+#joinServerButton,
+#multiplayerButton {
   font-size: 12px;
 }
 
@@ -113,10 +114,10 @@ td:hover {
 }
 
 button {
-  all: unset;
+  /* all: unset; */
   position: relative;
   cursor: pointer;
-  border-style: solid;
+  /* border-style: solid; */
   border-width: 2px;
   border-color: black;
 }
