--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -256,15 +256,24 @@ img.flagOnMine {
 
 
 /* Use a media query to add a break point at __ px: */
-@media screen and (min-width: 2560px) {
+@media screen and (min-width: 768px) {
   #container {
     grid-template-columns: 20% 80%;
-    /* width: 90vw; */
+    width: 90vw;
   }
 }
+
 @media screen and (min-width: 1440px) {
   #container {
     grid-template-columns: 20% 80%;
-    /* width: 90vw; */
+    width: 70vw;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  #container {
+    grid-template-columns: 20% 80%;
+    width: 40vw;
+    min-height: 40vh;
   }
 }
