--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  height: 100dvh;
   background-color: #79b799;
 }
 
@@ -51,18 +52,6 @@ button {
   opacity: .75;
 }
 
-#joinServerButton {
-  background-color: lightgray;
-}
-
-#joinServerButton span {
-  display: inline-block;
-}
-
-#joinServerButton:active span {
-  transform: translate(.35px, .35px);
-}
-
 #leaderboard {
   color: white;
   position: absolute;
@@ -99,6 +88,9 @@ button {
 }
 
 #container {
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
   border-bottom: 2px solid black;
   position: absolute;
   top: 50%;
@@ -108,21 +100,16 @@ button {
   transform: translate(-50%, -50%);
   /* moves the div back and scales it up */
   display: grid;
-  /* grid-template-columns: 20% 80%; */
-  grid-template-rows: 5% 95%;
+  /* width: 60vw; */
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
   grid-template-areas: 
-    'header header'
-    'sidebar main';
+    'sidebar'
+    'main';
   /* min-height: 50vh; */
+  /* height: 70vh;   */
   grid-row-end: auto;
-}
-
-#header {
-  font-size: 50%;
-  grid-area: header;
-  justify-self: center; /* Centers item along x-axis */
-  align-self: center; /* Centers item along y-axis */
-  font-family: 'Press Start 2P', cursive;
+  overflow: visible;
 }
 
 #sidebar * {
@@ -133,42 +120,60 @@ button {
 #sidebar {
   grid-area: sidebar;
   display: grid;
-  grid-template-rows: 1.25fr 2fr 2fr;
-  grid-template-columns: 1fr;
+  grid-template-rows: none;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   padding: 5px;
-  border-top: 2px solid black;
-  border-left: 2px solid black;
-  border-right: 2px solid black;
+}
+
+#difficultySelection {
+  width: 40%;
+  justify-self: center;
+}
+
+
+#joinServerForm  {
+  display: flex;
+  justify-content: end;
+}
+#serverCodeInput {
+  width: 35%;
+}
+
+#joinServerButton {
+  background-color: lightgray;
+  width: 20%;
+}
+
+#joinServerButton span {
+  all: unset;
+  display: inline-block;
+}
+
+#joinServerButton:active span {
+  transform: translate(.35px, .35px);
 }
 
 #gameBoard {
   grid-area: main;
   display: grid;
-  /* grid-template-rows: 10% 80% 10%; */
   grid-template-rows: .20fr 1fr .20fr;
-  grid-template-columns: 100%;
+  grid-template-columns: 1fr;
   grid-auto-flow: column;
   align-items: center;
-  border-top: 2px solid black;
-  border-right: 2px solid black;
 }
 
 .buddyButton {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   background-color: #f6cf4c;
-  border-radius: 50%;
   justify-self: center; /* Centers item along x-axis */
   align-self: center; /* Centers item along y-axis */
+  margin: 10px;
 }
 
 .buddyImg {
   max-width: 100%;
-}
-
-.buddyButton:active {
-  transform: translate(.35px, .35px);
 }
 
 .flagButton {
@@ -180,10 +185,7 @@ button {
   background-position: 50%;
   justify-self: center; /* Centers item along x-axis */
   align-self: center; /* Centers item along y-axis */
-}
-
-.flagButton:active {
-  transform: translate(.35px, .35px);
+  margin: 10px;
 }
 
 button.flagButton .flagCounter {
@@ -221,6 +223,12 @@ button.flagButton .flagCounter {
   font-family: 'Press Start 2P', cursive;
 }
 
+.buddyButton:active, 
+.flagButton:active {
+  transform: translate(.35px, .35px);
+}
+
+
 #gameWindow td:hover {
   background-color: rgba(200, 200, 200, 1);
 }
@@ -232,7 +240,7 @@ button.flagButton .flagCounter {
   background-color: lightgray;
   text-align: center;
   align-items: center;
-  margin-left: 60%;
+  margin-left: 65%;
   border-radius: 10px;
 }
 
@@ -257,45 +265,66 @@ img.flagOnMine {
 
 /* Use a media query to add a break point at __ px: */
 @media screen and (min-width: 425px) {
-  #container {
-    grid-template-columns: 0% 100%;
+  /* #container {
+    grid-template-rows: 15% 85%;
+    grid-template-columns: 100%;
+    grid-template-areas: 
+      'sidebar'
+      'main';
     width: 95vw;
-    min-height: 55vh;
+    min-height: 70vh;
+  }
+  #sidebar {
+    grid-area: sidebar;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: none;
   }
   #sidebar * {
     font-size: 15px;
+    padding: 2px;
   }
+  #serverItem, 
+  #difficultySelection {
+    align-self: start;
+  }
+  #gameBoard {
+    grid-template-rows: 15% 70% 15%;
+    border-left: 2px solid black;
+  } */
 }
+
 @media screen and (min-width: 768px) {
-  #container {
+  /* #container {
     grid-template-columns: 15% 85%;
-    width: 95vw;
     min-height: 55vh;
   }
   #sidebar * {
     font-size: 15px;
-  }
+  } */
 }
+
 @media screen and (min-width: 1024px) {
-  #container {
+  /* #container {
     grid-template-columns: 15% 85%;
     width: 80vw;
     min-height: 55vh;
-  }
+  } */
 
   /* reduce leaderboard size */
 }
+
 @media screen and (min-width: 1440px) {
-  #container {
+  /* #container {
     grid-template-columns: 20% 80%;
     width: 70vw;
     min-height: 55vh;
-  }
+  } */
 }
+
 @media screen and (min-width: 2560px) {
-  #container {
+  /* #container {
     grid-template-columns: 20% 80%;
     width: 40vw;
     min-height: 40vh;
-  }
+  } */
 }
