--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -61,7 +61,7 @@ button {
 }
 
 #leaderboard * {
-  font-size: 20px;
+  /* font-size: 20px; */
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -106,14 +106,10 @@ button {
   grid-template-areas: 
     'sidebar'
     'main';
-  /* min-height: 50vh; */
-  /* height: 70vh;   */
+  /* min-height: 44vh; */
+  /* height: 44vh;   */
   grid-row-end: auto;
   overflow: visible;
-}
-
-#sidebar * {
-  font-size: 20px;
 }
 
 #sidebar {
@@ -156,15 +152,15 @@ button {
 #gameBoard {
   grid-area: main;
   display: grid;
-  grid-template-rows: .20fr 1fr .20fr;
+  grid-template-rows: .1fr 1fr .1fr;
   grid-template-columns: 1fr;
   grid-auto-flow: column;
   align-items: center;
 }
 
 .buddyButton {
-  width: 25px;
-  height: 25px;
+  /* width: 25px;
+  height: 25px; */
   background-color: #f6cf4c;
   justify-self: center; /* Centers item along x-axis */
   align-self: center; /* Centers item along y-axis */
@@ -209,7 +205,7 @@ button.flagButton .flagCounter {
   position: relative;
   height: 25px;
   width: 25px;
-  font-size: 90%;
+  /* font-size: 90%; */
   -webkit-text-stroke-width: .1px;
   -webkit-text-stroke-color: black;
   text-align: center;
@@ -263,67 +259,199 @@ img.flagOnMine {
 
 
 /* Use a media query to add a break point at __ px: */
-@media screen and (min-width: 425px) {
-  /* #container {
-    grid-template-rows: 15% 85%;
-    grid-template-columns: 100%;
-    grid-template-areas: 
-      'sidebar'
-      'main';
-    width: 95vw;
-    min-height: 70vh;
+@media (min-width: 320px) {
+  #container {
+    width: 100vw;
+    overflow: scroll;
+  }
+  #leaderboard {
+    z-index: 100;
+    right: 18%;
+    font-size: 8px;
+  }
+  #gameWindow td {
+    font-size: 30%;
+    height: 12px;
+    width: 12px;
+  }
+  #sidebar * {
+    font-size: 7px;
   }
   #sidebar {
-    grid-area: sidebar;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: none;
+    width: 120vw;
   }
-  #sidebar * {
-    font-size: 15px;
-    padding: 2px;
+  #serverItem {
+    justify-self: end;
   }
-  #serverItem, 
-  #difficultySelection {
-    align-self: start;
+  #joinServerForm {
+    justify-content: start;
+  }
+  .buddyButton {
+    width: 16px;
+    height: 16px;
   }
   #gameBoard {
-    grid-template-rows: 15% 70% 15%;
-    border-left: 2px solid black;
-  } */
+    grid-area: main;
+    display: grid;
+    grid-template-rows: .1fr 1fr .1fr;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
+    align-items: center;
+    width: 120vw; /* Make the child grid wider than the parent container */
+    overflow: scroll;
+  }
+}
+@media (min-width: 375px) {
+  #container {
+    width: 100vw;
+    overflow: visible;
+  }
+  #leaderboard {
+    z-index: 100;
+    right: 18%;
+    font-size: 8px;
+  }
+  #gameWindow td {
+    font-size: 30%;
+    height: 12px;
+    width: 12px;
+  }
+  #sidebar * {
+    font-size: 8px;
+  }
+  #sidebar {
+    width: inherit;
+  }
+  #serverItem {
+    justify-self: start;
+  }
+  #joinServerForm {
+    justify-content: end;
+  }
+  .buddyButton {
+    width: 18px;
+    height: 18px;
+  }
+  #gameBoard {
+    grid-area: main;
+    display: grid;
+    grid-template-rows: .1fr 1fr .1fr;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
+    align-items: center;
+    width: inherit; 
+    overflow: visible;
+  }
 }
 
-@media screen and (min-width: 768px) {
-  /* #container {
-    grid-template-columns: 15% 85%;
-    min-height: 55vh;
+@media (min-width: 425px) {
+  #container {
+    width: 100vw;
+  }
+  #leaderboard {
+    z-index: 100;
+    right: 18%;
+    font-size: 9px;
+  }
+  #gameWindow td {
+    font-size: 50%;
+    height: 15px;
+    width: 15px;
+  }
+  #sidebar * {
+    font-size: 10px;
+  }
+  .buddyButton {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  #container {
+    width: 100vw;
+  }
+  #leaderboard {
+    z-index: 100;
+    right: 25%;
+    font-size: 10px;
+  }
+  #gameWindow td {
+    font-size: 90%;
+    height: 25px;
+    width: 25px;
   }
   #sidebar * {
     font-size: 15px;
-  } */
+  }
+  .buddyButton {
+    width: 25px;
+    height: 25px;
+  }
 }
 
-@media screen and (min-width: 1024px) {
-  /* #container {
-    grid-template-columns: 15% 85%;
-    width: 80vw;
-    min-height: 55vh;
-  } */
-
-  /* reduce leaderboard size */
+@media (min-width: 1024px) {
+  #container {
+    width: 77vw;
+  }
+  #leaderboard {
+    font-size: 8px;
+    right: 0;
+  }
+  #gameWindow td {
+    font-size: 90%;
+    height: 25px;
+    width: 25px;
+  }
+  #sidebar * {
+    font-size: 15px;
+  }
+  .buddyButton {
+    width: 25px;
+    height: 25px;
+  }
 }
 
-@media screen and (min-width: 1440px) {
-  /* #container {
-    grid-template-columns: 20% 80%;
-    width: 70vw;
-    min-height: 55vh;
-  } */
+@media (min-width: 1440px) {
+  #container {
+    width: 60vw;
+  }
+  #leaderboard {
+    font-size: 20px;
+    right: 0;
+  }
+  #gameWindow td {
+    font-size: 90%;
+    height: 25px;
+    width: 25px;
+  }
+  #sidebar * {
+    font-size: 20px;
+  }
+  .buddyButton {
+    width: 25px;
+    height: 25px;
+  }
 }
 
-@media screen and (min-width: 2560px) {
-  /* #container {
-    grid-template-columns: 20% 80%;
-    width: 40vw;
-    min-height: 40vh;
-  } */
+@media (min-width: 2560px) {
+  #container {
+    width: 33vw;
+  }
+  #leaderboard {
+    font-size: 20px;
+    right: 0;
+  }
+  #gameWindow td {
+    font-size: 90%;
+    height: 25px;
+    width: 25px;
+  }
+  #sidebar * {
+    font-size: 20px;
+  }
+  .buddyButton {
+    width: 25px;
+    height: 25px;
+  }
 }
