--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -372,6 +372,7 @@ img.flagOnMine {
   }
   #leaderboard {
     z-index: 100;
+    -webkit-text-stroke-width: .3px;
     right: 25%;
     font-size: 10px;
   }
@@ -399,7 +400,8 @@ img.flagOnMine {
     right: 0;
   }
   #gameWindow td {
-    font-size: 90%;
+    font-size: 100%;
+    -webkit-text-stroke-width: .3px;
     height: 25px;
     width: 25px;
   }
@@ -422,7 +424,8 @@ img.flagOnMine {
     right: 0;
   }
   #gameWindow td {
-    font-size: 100%;
+    font-size: 110%;
+    -webkit-text-stroke-width: .3px;
     height: 27px;
     width: 27px;
   }
@@ -439,6 +442,7 @@ img.flagOnMine {
   #container {
     width: 47vw;
     overflow: hidden;
+    transform: translate(-50%, -50%) scale(1.35);
   }
   #leaderboard {
     font-size: 20px;
@@ -446,6 +450,7 @@ img.flagOnMine {
   }
   #gameWindow td {
     font-size: 100%;
+    -webkit-text-stroke-width: .2px;
     height: 30px;
     width: 30px;
   }
