updated UI/UX and media queries

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -255,6 +255,9 @@ img.flagOnMine {
   pointer-events: none;
 }
 
+.servers {
+  color: transparent;
+}
 
 /* Use a media query to add a break point at __ px: */
 @media (min-width: 320px) {
