--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -123,6 +123,12 @@ button {
   padding: 5px;
 }
 
+#serverItem{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
 #difficultySelection {
   max-width: 40%;
   justify-self: center;
@@ -297,8 +303,91 @@ img.flagOnMine {
   transform: rotate(360deg);
 }
 
+.button-cover,
+.knobs,
+.layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.button {
+  position: relative;
+  width: 70px;
+  height: 28px;
+  margin: 0 auto;
+}
+.button.r,
+.button.r .layer {
+  border-radius: 100px;
+}
+.button.b2 {
+  border-radius: 2px;
+}
+.checkbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+.knobs {
+  z-index: 2;
+}
+.layer {
+  width: 100%;
+  background-color: #fcebeb;  /*single player*/
+  transition: 0.3s ease all;
+  z-index: 1;
+}
+#button .knobs:before,
+#button .knobs:after,
+#button .knobs span {
+  position: absolute;
+  top: 5px;
+  height: 18px;
+  padding: 9px;
+  border-radius: 2px;
+  transition: 0.3s ease all;
+}
+#button .knobs:before,
+#button .knobs:after {
+  color: #4e4e4e;
+  z-index: 1;
+}
+#button .knobs span {
+  width: 40%;
+  right: 37px;
+  background-color: #f44336; /*single player*/
+  z-index: 2;  
+}
+#button .checkbox:checked + .knobs span {
+/*   left: 4px; */
+  right: 4px;  
+  background-color: #03a9f4; /*multiplayer*/
+}
+#button .checkbox:checked ~ .layer {
+  background-color: #ebf7fc; /*multiplayer*/
+}
+.layer * {
+/*   border: 1px solid black; */
+  text-align: center;
+  width: 50%;
+  height: 60%;
+}
+.layer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+}
+
 /* Use a media query to add a break point at __ px: */
-@media (min-width: 320px) {
+@media (min-width: 100px) {
   #container {
     width: 100vw;
     overflow: scroll;
@@ -322,6 +411,7 @@ img.flagOnMine {
   #serverItem {
     justify-self: end;
     margin-left: 5px;
+    gap: 5px;
   }
   #joinServerForm {
     justify-content: start;
@@ -350,6 +440,32 @@ img.flagOnMine {
     margin-top: 7px;
     margin-left: 7px;
   }
+  .button {
+    position: relative;
+    width: 40px;
+    height: 20px;
+    margin: 0 auto;
+  }
+  .knobs {
+    margin-top: -1px;
+    height: 87%;
+  }
+  #button .knobs:before,
+  #button .knobs:after,
+  #button .knobs span {
+    position: absolute;
+    border-radius: 2px;
+    transition: 0.3s ease all;
+  }
+  #button .knobs span {
+    right: 20px;
+    background-color: #f44336; /*single player*/
+    z-index: 2;  
+  }
+  #button .checkbox:checked + .knobs span {
+    right: 3px;  
+    background-color: #03a9f4; /*multiplayer*/
+  }
 }
 
 @media (min-width: 375px) {
@@ -375,6 +491,7 @@ img.flagOnMine {
   }
   #serverItem {
     justify-self: end;
+    gap: 5px;
   }
   #joinServerForm {
     justify-content: start;
@@ -402,6 +519,32 @@ img.flagOnMine {
     margin-top: 8px;
     margin-left: 9px;
   }
+  .button {
+    position: relative;
+    width: 40px;
+    height: 20px;
+    margin: 0 auto;
+  }
+  .knobs {
+    margin-top: -1px;
+    height: 87%;
+  }
+  #button .knobs:before,
+  #button .knobs:after,
+  #button .knobs span {
+    position: absolute;
+    border-radius: 2px;
+    transition: 0.3s ease all;
+  }
+  #button .knobs span {
+    right: 20px;
+    background-color: #f44336; /*single player*/
+    z-index: 2;  
+  }
+  #button .checkbox:checked + .knobs span {
+    right: 3px;  
+    background-color: #03a9f4; /*multiplayer*/
+  }
 }
 
 @media (min-width: 425px) {
@@ -424,6 +567,7 @@ img.flagOnMine {
   }
   #serverItem {
     justify-self: end;
+    gap: 10px;
   }
   #joinServerForm {
     justify-content: start;
@@ -435,6 +579,32 @@ img.flagOnMine {
   #servers.active {
     margin-top: 6px;
     margin-left: 9px;
+  }
+  .button {
+    position: relative;
+    width: 40px;
+    height: 20px;
+    margin: 0 auto;
+  }
+  .knobs {
+    margin-top: -1px;
+    height: 87%;
+  }
+  #button .knobs:before,
+  #button .knobs:after,
+  #button .knobs span {
+    position: absolute;
+    border-radius: 2px;
+    transition: 0.3s ease all;
+  }
+  #button .knobs span {
+    right: 20px;
+    background-color: #f44336; /*single player*/
+    z-index: 2;  
+  }
+  #button .checkbox:checked + .knobs span {
+    right: 3px;  
+    background-color: #03a9f4; /*multiplayer*/
   }
 }
 
@@ -474,6 +644,31 @@ img.flagOnMine {
   #servers.active {
     margin-top: 1px;
     margin-left: 12px;
+  }
+  .button {
+    position: relative;
+    width: 70px;
+    height: 28px;
+    margin: 0 auto;
+  }
+  #button .knobs:before,
+  #button .knobs:after,
+  #button .knobs span {
+    position: absolute;
+    top: 6px;
+    height: 100%;
+    border-radius: 2px;
+    transition: 0.3s ease all;
+  }
+  #button .knobs span {
+    width: 40%;
+    right: 37px;
+    background-color: #f44336; /*single player*/
+    z-index: 2;  
+  }
+  #button .checkbox:checked + .knobs span {
+    right: 4px;  
+    background-color: #03a9f4; /*multiplayer*/
   }
 }
 
