--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -51,7 +51,7 @@ button {
 .buddyButton:hover,
 .flagButton:hover,
 #serverListButton:hover {
-  opacity: .75;
+  opacity: 0.75;
 }
 
 #leaderboard {
@@ -65,16 +65,17 @@ button {
 
 #leaderboard * {
   /* font-size: 20px; */
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-#leaderboard th, #leaderboard td {
+#leaderboard th,
+#leaderboard td {
   padding: 5px;
   text-align: left;
 }
 
 #leaderboard thead {
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   text-align: left;
 }
 
@@ -83,7 +84,7 @@ button {
 }
 
 #leaderboard tbody .leaderboard-player {
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 #leaderboard tbody .leaderboard-player td:nth-child(2) {
@@ -109,9 +110,9 @@ button {
   /* width: 60vw; */
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  grid-template-areas: 
-    'sidebar'
-    'main';
+  grid-template-areas:
+    "sidebar"
+    "main";
   /* min-height: 44vh; */
   /* height: 44vh;   */
   grid-row-end: auto;
@@ -127,7 +128,7 @@ button {
   padding: 5px;
 }
 
-#serverItem{
+#serverItem {
   display: flex;
   gap: 10px;
   align-items: center;
@@ -138,7 +139,7 @@ button {
   justify-self: center;
 }
 
-#joinServerForm  {
+#joinServerForm {
   display: flex;
   justify-content: end;
 }
@@ -157,13 +158,13 @@ button {
 }
 
 #joinServerButton:active span {
-  transform: translate(.35px, .35px);
+  transform: translate(0.35px, 0.35px);
 }
 
 #gameBoard {
   grid-area: main;
   display: grid;
-  grid-template-rows: .1fr 1fr .1fr;
+  grid-template-rows: 0.1fr 1fr 0.1fr;
   grid-template-columns: 1fr;
   grid-auto-flow: column;
   align-items: center;
@@ -217,21 +218,21 @@ button.flagButton .flagCounter {
   height: 25px;
   width: 25px;
   /* font-size: 90%; */
-  -webkit-text-stroke-width: .1px;
+  -webkit-text-stroke-width: 0.1px;
   -webkit-text-stroke-color: black;
   text-align: center;
   background-color: lightgray;
   border-style: solid;
   border-color: gray;
   border-width: 1px;
-  font-weight:bold;
+  font-weight: bold;
   /* font-family: 'Russo One', sans-serif; */
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
 }
 
-.buddyButton:active, 
+.buddyButton:active,
 .flagButton:active {
-  transform: translate(.35px, .35px);
+  transform: translate(0.35px, 0.35px);
 }
 
 #gameWindow td:hover {
@@ -239,7 +240,7 @@ button.flagButton .flagCounter {
 }
 
 .playAgainButton {
-  grid-area: 3 / 4 / 3 / -2;  /* Next to flag button */
+  grid-area: 3 / 4 / 3 / -2; /* Next to flag button */
   max-width: 80px;
   padding: 5px;
   background-color: lightgray;
@@ -250,7 +251,7 @@ button.flagButton .flagCounter {
 }
 
 .playAgainButton:active {
-  transform: translate(.35px, .35px);
+  transform: translate(0.35px, 0.35px);
 }
 
 img {
@@ -294,7 +295,7 @@ img.flagOnMine {
 #servers.active {
   display: flex;
   flex-direction: column;
-  background-color: rgba(256,256,256,.7);
+  background-color: rgba(256, 256, 256, 0.7);
   margin-top: -1px;
   margin-left: 14px;
 }
@@ -359,7 +360,7 @@ img.flagOnMine {
   display: flex !important;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
-  font-size: calc(var(--width) * .2); /* Adjust the factor (0.1) as needed */
+  font-size: calc(var(--width) * 0.2); /* Adjust the factor (0.1) as needed */
 }
 
 .layer {
@@ -408,7 +409,7 @@ img.flagOnMine {
   #gameBoard {
     grid-area: main;
     display: grid;
-    grid-template-rows: .1fr 1fr .1fr;
+    grid-template-rows: 0.1fr 1fr 0.1fr;
     grid-template-columns: 1fr;
     grid-auto-flow: column;
     align-items: center;
@@ -461,11 +462,11 @@ img.flagOnMine {
   #gameBoard {
     grid-area: main;
     display: grid;
-    grid-template-rows: .1fr 1fr .1fr;
+    grid-template-rows: 0.1fr 1fr 0.1fr;
     grid-template-columns: 1fr;
     grid-auto-flow: column;
     align-items: center;
-    width: inherit; 
+    width: inherit;
     overflow: visible;
   }
   #serverListContainer {
@@ -520,7 +521,7 @@ img.flagOnMine {
     overflow: hidden;
   }
   #leaderboard {
-    -webkit-text-stroke-width: .3px;
+    -webkit-text-stroke-width: 0.3px;
     right: 0%;
     font-size: 10px;
   }
@@ -559,12 +560,12 @@ img.flagOnMine {
     overflow: hidden;
   }
   #leaderboard {
-    font-size: 8px;
+    font-size: 15px;
     right: 0;
   }
   #gameWindow td {
     font-size: 100%;
-    -webkit-text-stroke-width: .3px;
+    -webkit-text-stroke-width: 0.3px;
     height: 25px;
     width: 25px;
   }
@@ -589,12 +590,12 @@ img.flagOnMine {
     overflow: hidden;
   }
   #leaderboard {
-    font-size: 8px;
+    font-size: 15px;
     right: 0;
   }
   #gameWindow td {
     font-size: 100%;
-    -webkit-text-stroke-width: .3px;
+    -webkit-text-stroke-width: 0.3px;
     height: 25px;
     width: 25px;
   }
@@ -613,9 +614,10 @@ img.flagOnMine {
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1440px) and (max-width: 1920px) {
   #container {
-    width: 64vw;
+    width: 59vw;
+    transform: translate(-50%, -50%) scale(1.2);
     overflow: hidden;
   }
   #leaderboard {
@@ -624,7 +626,7 @@ img.flagOnMine {
   }
   #gameWindow td {
     font-size: 110%;
-    -webkit-text-stroke-width: .3px;
+    -webkit-text-stroke-width: 0.3px;
     height: 27px;
     width: 27px;
   }
@@ -646,9 +648,10 @@ img.flagOnMine {
   }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1920px) and (max-width: 2560px) {
   #container {
-    width: 48vw;
+    width: 50vw;
+    transform: translate(-50%, -50%) scale(1.3);
     overflow: hidden;
   }
   #leaderboard {
@@ -657,7 +660,7 @@ img.flagOnMine {
   }
   #gameWindow td {
     font-size: 110%;
-    -webkit-text-stroke-width: .3px;
+    -webkit-text-stroke-width: 0.3px;
     height: 27px;
     width: 27px;
   }
@@ -683,7 +686,7 @@ img.flagOnMine {
   #container {
     width: 40vw;
     overflow: hidden;
-    transform: translate(-50%, -50%) scale(1.35);
+    transform: translate(-50%, -50%) scale(1.3);
   }
   #leaderboard {
     font-size: 20px;
@@ -691,7 +694,7 @@ img.flagOnMine {
   }
   #gameWindow td {
     font-size: 100%;
-    -webkit-text-stroke-width: .2px;
+    -webkit-text-stroke-width: 0.2px;
     height: 30px;
     width: 30px;
   }
