--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 body {
@@ -50,7 +49,8 @@ button {
 .playAgainButton:hover,
 .buddyButton:hover,
 .flagButton:hover,
-#serverListButton:hover {
+#serverListButton:hover,
+.chatButton:hover {
   opacity: 0.75;
 }
 
@@ -308,6 +308,11 @@ img.flagOnMine {
   transform: rotate(360deg);
 }
 
+#servers h1 {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
 #enableJoinSwitch {
   --width: 50px;
   --height: calc(var(--width) / 2);
@@ -369,6 +374,129 @@ img.flagOnMine {
   align-items: center; /* Center vertically */
   width: 100%;
   height: 100%;
+}
+
+#chatContainer {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  bottom: 0;
+  right: 0;
+  margin: 20px;
+  height: 450px;
+}
+
+.chatGUI {
+  display: flex;
+  flex-direction: column;
+  height: 87%;
+  width: 260px;
+  box-shadow: 4px 4px 14px black;
+}
+
+.chatGUI * {
+  font-size: 17px;
+}
+
+#chatContainer .header {
+  /* background-color: inherit; */
+  height: 30px;
+  width: 100%;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  position: relative;
+}
+
+.minimizeChatButton {
+  all: unset;
+  cursor: pointer;
+  display: flex;
+  width: 10%;
+  height: 100%;
+  justify-content: center;
+  position: absolute;
+  right: 0;
+  margin-right: 5px;
+}
+
+#chatContainer .chatBox {
+  background-color: whitesmoke;
+  height: 100%;
+  width: 100%;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  position: relative;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
+}
+
+.chatMessage {
+  max-width: 100%;
+  word-wrap: break-word;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+#chatBoxForm {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: sticky;
+  width: 100%;
+  padding: 8px;
+  border-top: 1px black solid;
+  background-color: rgb(219, 215, 215);
+}
+
+#chatBoxForm input {
+  width: 100%;
+}
+
+#chatBoxButton {
+  padding-left: 7px;
+  padding-right: 7px;
+}
+
+.chatButton {
+  all: unset;
+  position: absolute;
+  bottom: 0;
+  align-self: flex-end;
+  background-color: lightblue;
+  padding: 15px;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.chatButton:active {
+  /* background-color: gray; */
+  opacity: 1;
+  transform: translate(0px, 0.5px);
+}
+
+.chatButton i {
+  top: 24px;
+  position: absolute;
+}
+
+.chatNotifyIcon {
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 11px;
+  color: white;
+  background-color: red;
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  position: absolute;
+  top: -5px;
+  right: -5px;
 }
 
 /* Use a media query to add a break point at __ px: */
