--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -12,11 +12,11 @@ body {
 
 p,
 label,
-input,
 #choice,
 #joinServerButton,
 #multiplayerButton {
   font-size: 12px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 p,
@@ -37,10 +37,8 @@ button,
 }
 
 button {
-  /* all: unset; */
   position: relative;
   cursor: pointer;
-  /* border-style: solid; */
   border-width: 2px;
   border-color: black;
 }
@@ -50,7 +48,8 @@ button {
 .buddyButton:hover,
 .flagButton:hover,
 #serverListButton:hover,
-.chatButton:hover {
+.chatButton:hover,
+.minimizeChatButton:hover {
   opacity: 0.75;
 }
 
@@ -391,7 +390,6 @@ img.flagOnMine {
   flex-direction: column;
   height: 87%;
   width: 260px;
-  box-shadow: 4px 4px 14px black;
 }
 
 .chatGUI * {
@@ -399,42 +397,101 @@ img.flagOnMine {
 }
 
 #chatContainer .header {
-  /* background-color: inherit; */
   height: 30px;
   width: 100%;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   position: relative;
+  box-shadow: 4px 4px 14px black;
 }
 
 .minimizeChatButton {
   all: unset;
   cursor: pointer;
   display: flex;
-  width: 10%;
+  width: 20%;
   height: 100%;
   justify-content: center;
   position: absolute;
   right: 0;
-  margin-right: 5px;
+  /* background-color: red; */
 }
 
-#chatContainer .chatBox {
+.chatBox {
   background-color: whitesmoke;
   height: 100%;
   width: 100%;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
   position: relative;
   overflow-y: auto;
   scrollbar-gutter: stable;
+  box-shadow: 4px 4px 14px black;
+}
+
+.chatBoxMessages {
+  margin-top: 7px;
+  margin-bottom: 7px;
+  /* margin-left: 17px;
+  margin-right: 2px; */
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .chatMessage {
-  max-width: 100%;
-  word-wrap: break-word;
+  list-style-type: none;
+  color: rgb(255, 255, 255);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  max-width: 70%;
+  width: fit-content;
+  word-break: break-word;
+  /* word-break: break-word is deprecated 
+  replace with  
+  word-break: normal;
+  and overflow-wrap: anywhere;*/
+  word-break: normal;
+  overflow-wrap: anywhere;
+  white-space: pre-wrap;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  margin-bottom: 2px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  scrollbar-gutter: stable both-edges;
+}
+
+/* current client's chat messages */
+.chatMessage.client {
+  margin-left: auto;
+  border-bottom-left-radius: 15px;
+  /* background-color: rgb(67, 182, 67); */
+  background-color: #dd2e44;
+}
+
+/* other client's chat messages */
+.chatMessage.otherClient {
+  margin-right: auto;
+  border-bottom-right-radius: 15px;
+  background-color: #2e4add;
+}
+
+/* status messages */
+.chatMessage.status,
+.chatMessage.status strong {
+  font-size: 12px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding-right: 0;
+  padding-left: 0;
+  color: rgb(34, 34, 34);
+  /* background-color: red; */
+}
+
+.chatMessage.status .joined {
+  color: green;
+}
+.chatMessage.status .left {
+  color: red;
 }
 
 #chatBoxForm {
@@ -446,6 +503,9 @@ img.flagOnMine {
   padding: 8px;
   border-top: 1px black solid;
   background-color: rgb(219, 215, 215);
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  box-shadow: 4px 4px 14px black;
 }
 
 #chatBoxForm input {
@@ -470,6 +530,7 @@ img.flagOnMine {
   justify-content: center;
   border-radius: 15px;
   cursor: pointer;
+  box-shadow: 2px 2px 4px black;
 }
 
 .chatButton:active {
@@ -488,7 +549,7 @@ img.flagOnMine {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 11px;
+  font-size: 12px;
   color: white;
   background-color: red;
   height: 20px;
@@ -497,6 +558,7 @@ img.flagOnMine {
   position: absolute;
   top: -5px;
   right: -5px;
+  box-shadow: 1px 1px 4px black;
 }
 
 /* Use a media query to add a break point at __ px: */
