--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -58,14 +58,14 @@ button {
   z-index: 100;
   color: white;
   position: absolute;
-  right: 0px;
-  top: 0px;
+  right: 0;
+  top: 0;
   /* background-color: rgba(0,0,0,0.5); */
 }
 
 #leaderboard * {
   /* font-size: 20px; */
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #leaderboard th,
